--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      PUBG MOBILE
    </title>
    </head>
-   <body style="background-color:#7FFF00">
+   <body style="background-color:#FFFAFA">
 <header>
 <h1 style="text-align:center;color:bleac;font-size-:50px">
 PUBG MOBILE
